# dumbo-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: clipboard.rs  config.rs  diff.rs  init.rs  lang.rs  main.rs  run.rs
