[package]
name = "dumbo-rs"

version = "0.4.1"
edition = "2021"
description = "Turn any codebase into LLM-ready context : supports monorepos, multi-project runs, and git diffs."
license = "MIT"
repository = "https://github.com/Bessouat40/dumbo-rs"
readme = "README.md"

[[bin]]
name = "dumbo"
path = "src/main.rs"