[package]
name = "dumbo-rs"

version = "0.5.0"
edition = "2021"
description = "Turn any codebase into LLM-ready context : supports monorepos, multi-project runs, and git diffs."
license = "MIT"
repository = "https://github.com/Bessouat40/dumbo-rs"
readme = "README.md"

[[bin]]
name = "dumbo"
path = "src/main.rs"

[dependencies]
arboard = "3"
toml = "0.8"